--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -5,7 +5,7 @@ max-lease-time 7200;
 subnet 192.168.2.0 netmask 255.255.255.0 {
 option routers 192.168.2.1;
 option subnet-mask 255.255.255.0;
-option domain-name Zak's Network;
+option domain-name test;
 option domain-name-servers 192.168.2.1;
 range 192.168.2.2 192.168.2.40;
 }
