--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,4 +1,4 @@
-interface=wlan0mon
+interface=ap_wlan
 dhcp-range=192.168.2.2,192.168.2.230,255.255.255.0,12h
 dhcp-option=3,192.168.2.1
 dhcp-option=6,192.168.2.1
