--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,6 +1,6 @@
-interface=wlan0mon
+interface=ap_wlan
 driver=nl80211
-ssid=Zak's Network1
+ssid=DeercFPV-k943703fake
 hw_mode=g
 channel=11
 macaddr_acl=0
