--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,7 +1,7 @@
 interface=wlan0mon
 driver=nl80211
-ssid=DeercFPV-k943703fake
+ssid=DeercFPV-k943703
 hw_mode=g
-channel=11
+channel=1
 macaddr_acl=0
 ignore_broadcast_ssid=0
